Closed Bug 1413528 Opened 7 years ago Closed 7 years ago

Non-unified build fixes for Apple decoders

Categories

(Core :: Audio/Video: Playback, defect)

Unspecified
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox58 --- fixed

People

(Reporter: philn, Assigned: philn)

References

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36

Steps to reproduce:

In AppleCMLinker.cpp, Logging.h and PlatformDecoderModule.h are needed for the LOG macro.
In AppleATDecoder.cpp VideoUtils.h is needed because FramesToTimeUnit() is called in ::DecodeSample().
Blocks: servo-media
OS: Unspecified → Mac OS X
Component: Untriaged → Audio/Video: Playback
Product: Firefox → Core
Attachment #8924166 - Flags: review?(cpearce) → review+
Pushed by cpearce@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/dec80bcc4b39
Non-unified build fixes for Apple decoders. r=cpearce
https://hg.mozilla.org/mozilla-central/rev/dec80bcc4b39
Status: UNCONFIRMED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Assignee: nobody → philn
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: