Bug 1413528 - Non-unified build fixes for Apple decoders. r=cpearce

In AppleCMLinker.cpp, Logging.h and PlatformDecoderModule.h are needed for the LOG macro.
In AppleATDecoder.cpp VideoUtils.h is needed because FramesToTimeUnit() is called in ::DecodeSample().

MozReview-Commit-ID: 2guOwAsYJF1